# bt_loss_landscapes

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: mhc_and_explorer.py
experiment/: experiment.py
src/: experiment.py  explorer.py  filling_hypercubes.py  grid_traversal.py  helper.py  main.py  marching_hypercubes.py  network.py  plot.py
src/checkpoints/: epoch=49-step=400.ckpt  epoch=49-step=500-v1.ckpt  epoch=49-step=500.ckpt
test/: test.py  test_explorer.py  test_filling_hypercubes.py  test_marching_hypercubes.py  test_network.py
