[project]
name = "bt-loss-landscapes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pyqt5>=5.15.11",
    "pytest>=8.3.4",
    "pytorch-lightning>=2.5.0.post0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
]
